force-app/main/default/objects/Claim__c/fields/ApprovalLevel__c.field-meta.xml
<CustomField>
    <fullName>ApprovalLevel__c</fullName>
    <label>Approval Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Approved</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Senior Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>