force-app/main/default/objects/Claim__c/fields/ApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovedDate__c</fullName>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>