force-app/main/default/objects/Claim__c/fields/ClaimAmount__c.field-meta.xml
<CustomField>
    <fullName>ClaimAmount__c</fullName>
    <label>Claim Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>