force-app/main/default/objects/Claim__c/fields/ClaimDescription__c.field-meta.xml
<CustomField>
    <fullName>ClaimDescription__c</fullName>
    <label>Claim Description</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>