force-app/main/default/objects/Claim__c/fields/IncidentDate__c.field-meta.xml
<CustomField>
    <fullName>IncidentDate__c</fullName>
    <label>Incident Date</label>
    <type>Date</type>
</CustomField>